[package]
name = "chrome-driver-rs"         
version = "0.1.3"
edition = "2021"
authors = ["kyunghyunHan <ekfqlwcjswl@naver.com>"]
description = "ChromeDriver latest version downloader & manager for Rust"
license = "MIT OR Apache-2.0"  
repository = "https://github.com/kyunghyunHan/chrome_driver_rs"
readme = "README.md"



[lib]
name = "chrome_driver_rs"      
path = "src/lib.rs"           

[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.47.1", features = ["full"] }
zip = "5.1.1"
